[tool.poetry]
name = "work-with-html"
version = "0.1.0"
description = ""
authors = ["Ilia Akatov <ilia-akatoff@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^5.0.0"
pytest = "^8.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
